# gov-program-predictor

./: .gitignore  Dockerfile  Sample Data - Personnel.xlsx  pyproject.toml  requirements.txt
src/gov_program_predictor/api/: main.py
src/gov_program_predictor/core/: processor.py
static/css/: styles.css
templates/: index.html
